--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
